# html2rdf

./: Cargo.toml  README.md  deny.toml
compact_shacl/: Cargo.toml
compact_shacl/src/: grammar.pest  main.rs
compact_shacl/src/snapshots/: compact_shacl__test__parser.snap
html2rdf/: Cargo.toml
html2rdf-cli/: Cargo.toml
html2rdf-cli/src/: main.rs
html2rdf/src/: element_processor.rs  errors.rs  lib.rs  lists.rs  processor_graph.rs  reference_impl.rs  resolver.rs  vocab.rs  vocabs.rs
html2rdf/src/algorithms/: mod.rs  property_copying.rs  vocabulary_expansion.rs
html2rdf/src/graphs/: mod.rs  output.rs  processor.rs
html2rdf/src/host_language/: html.rs  mod.rs  xhtml.rs
html2rdf/src/rdfa/: element_processor.rs  initial_context.rs  mod.rs  resolver.rs
html2rdf/src/rdfa/algorithms/: property_copying.rs  vocabulary_expansion.rs
html2rdf/tests/: basic-tests.rs  edge-cases.rs  fuzz-crash.rs  fuzz-oracle.rs  fuzz-pyrdfa3-oracle.rs  html-rdfa.rs  processor-graph.rs  property-copying.rs  rdfa-primer.rs  sample-html-rdfa.rs  sample-rdfa-core.rs  sample-rdfa-primer.rs  spec-conformance.rs  test-cases.rs  todo-coverage.rs  utils.rs  xml-tests.rs
html2rdf/tests/__fuzz__/crash/crashes/: crash-5b7f91c5f03cd6e2248e858b0431f9d129ce49cb
html2rdf/tests/__fuzz__/oracle/crashes/: crash-d0016eb160b41d45a3f663857cd1d761a64cc8f7
html2rdf/tests/snapshots/: test_cases__rdfa1.1-lite__html5__0015.html_processor_graph.snap  test_cases__rdfa1.1-lite__html5__0021.html_processor_graph.snap  test_cases__rdfa1.1-lite__html5__0023.html_processor_graph.snap  test_cases__rdfa1.1-lite__html5__0030.html_processor_graph.snap  test_cases__rdfa1.1-lite__html5__0050.html_processor_graph.snap  test_cases__rdfa1.1-lite__html5__0052.html_processor_graph.snap  test_cases__rdfa1.1-lite__html5__0053.html_processor_graph.snap  test_cases__rdfa1.1-lite__html5__0066.html_processor_graph.snap  test_cases__rdfa1.1-lite__html5__0067.html_processor_graph.snap  test_cases__rdfa1.1-lite__html5__0071.html_processor_graph.snap  test_cases__rdfa1.1-lite__html5__0074.html_processor_graph.snap  test_cases__rdfa1.1-lite__html5__0075.html_processor_graph.snap  test_cases__rdfa1.1-lite__html5__0089.html_processor_graph.snap  test_cases__rdfa1.1-lite__html5__0117.html_processor_graph.snap  test_cases__rdfa1.1-lite__html5__0140.html_processor_graph.snap  test_cases__rdfa1.1-lite__html5__0238.html_processor_graph.snap  test_cases__rdfa1.1-lite__html5__0239.html_processor_graph.snap  test_cases__rdfa1.1-lite__html5__0312.html_processor_graph.snap  test_cases__rdfa1.1-lite__html5__0313.html_processor_graph.snap  test_cases__rdfa1.1-lite__xhtml5__0015.xhtml_processor_graph.snap  test_cases__rdfa1.1-lite__xhtml5__0021.xhtml_processor_graph.snap  test_cases__rdfa1.1-lite__xhtml5__0023.xhtml_processor_graph.snap  test_cases__rdfa1.1-lite__xhtml5__0030.xhtml_processor_graph.snap  test_cases__rdfa1.1-lite__xhtml5__0050.xhtml_processor_graph.snap  test_cases__rdfa1.1-lite__xhtml5__0052.xhtml_processor_graph.snap  test_cases__rdfa1.1-lite__xhtml5__0053.xhtml_processor_graph.snap  test_cases__rdfa1.1-lite__xhtml5__0066.xhtml_processor_graph.snap  test_cases__rdfa1.1-lite__xhtml5__0067.xhtml_processor_graph.snap  test_cases__rdfa1.1-lite__xhtml5__0071.xhtml_processor_graph.snap  test_cases__rdfa1.1-lite__xhtml5__0074.xhtml_processor_graph.snap  test_cases__rdfa1.1-lite__xhtml5__0075.xhtml_processor_graph.snap  test_cases__rdfa1.1-lite__xhtml5__0089.xhtml_processor_graph.snap  test_cases__rdfa1.1-lite__xhtml5__0115.xhtml_processor_graph.snap  test_cases__rdfa1.1-lite__xhtml5__0117.xhtml_processor_graph.snap  test_cases__rdfa1.1-lite__xhtml5__0134.xhtml_processor_graph.snap  test_cases__rdfa1.1-lite__xhtml5__0140.xhtml_processor_graph.snap  test_cases__rdfa1.1-lite__xhtml5__0147.xhtml_processor_graph.snap  test_cases__rdfa1.1-lite__xhtml5__0214.xhtml_processor_graph.snap  test_cases__rdfa1.1-lite__xhtml5__0238.xhtml_processor_graph.snap  test_cases__rdfa1.1-lite__xhtml5__0239.xhtml_processor_graph.snap  (+368 more)
librdfa-wrapper/: Cargo.toml  build.rs
librdfa-wrapper/src/: lib.rs
