[workspace]
resolver = "2"
members = [ "html2rdf" , "html2rdf-cli"]

[workspace.package]
authors = ["George Pollard <porges@porg.es>"]
edition = "2024"
keywords = ["html", "rdf", "rdfa"]
license = "Apache-2.0"
publish = false
readme = "README.md"
repository = "https://github.com/Porges/html2rdf"
rust-version = "1.82.0"

[workspace.dependencies]
html2rdf = { path = "html2rdf" }
oxiri = "^0.2.11"
oxrdf = "^0.2.4"
oxttl = "^0.1.8"
