[package]
name = "compact_shacl"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
publish.workspace = true
readme.workspace = true
repository.workspace = true

[dependencies]
miette = { version = "7.6.0", features = ["fancy-no-backtrace"] }
pest = { version = "2.8.0", features = ["miette-error"] }
pest_derive = "2.8.0"

[dev-dependencies]
indoc = "2.0.6"
insta = "1.43.1"
pest = { version = "2.8.0", features = ["pretty-print"] }
