[package]
name = "html2rdf-cli"
version = "0.2.0"
authors.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
publish.workspace = true
readme.workspace = true
repository.workspace = true

[[bin]]
name = "html2rdf"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.59", features = ["derive", "wrap_help"] }
html2rdf = { workspace = true }
oxiri = { workspace = true }
oxrdf = { workspace = true }
oxttl = { workspace = true }
reqwest = { version = "0.13.2", default-features = false, features = ["charset", "http2", "native-tls", "system-proxy"] }
tokio = { version = "1.49.0", features = ["macros", "rt"] }
url = "2.5.8"
