[package]
name = "html2rdf-cli"
version = "0.2.0"
authors.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
publish.workspace = true
readme.workspace = true
repository.workspace = true


[[bin]]
name = "html2rdf"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.59", features = ["cargo", "derive", "wrap_help"] }
html2rdf = { workspace = true }
jiff = "0.2.20"
oxiri = { workspace = true }
oxrdf = { workspace = true, features = ["rdfc-10"] }
oxttl = { workspace = true }
reqwest = { version = "0.13.2", default-features = false, features = ["charset", "http2", "native-tls", "system-proxy"] }
tokio = { version = "1.49.0", features = ["macros", "rt"] }
tracing-subscriber = { version = "0.3.22" }
url = "2.5.8"
