[package]
name = "html2rdf-cli"
version = "0.2.0"
authors.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
publish.workspace = true
readme.workspace = true
repository.workspace = true


[[bin]]
name = "html2rdf"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.59", features = ["cargo", "derive", "wrap_help"] }
dunce = "1.0.5"
html2rdf = { workspace = true }
jiff = { workspace = true }
oxiri = { workspace = true }
oxrdf = { workspace = true, features = ["rdfc-10"] }
oxttl = { workspace = true }
reqwest = { version = "0.13", features = ["native-tls"] }
tokio = { version = "1.49.0", features = ["macros", "rt"] }
tracing-subscriber = { version = "0.3.22" }
url = "2.5.8"
