[package]
name = "html2rdf"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
publish.workspace = true
readme.workspace = true
repository.workspace = true

[dependencies]
curie = "0.1.4"
derive_more = { version = "2.0.1", features = ["display", "error", "from", "from_str"] }
icu = { version = "2.0.0-beta2" }
indexmap = "2.9.0"
itertools = "0.14.0"
oxiri = "0.2.11"
oxrdf = "0.2.4"
oxsdatatypes = "0.2.2"
rdf-canon = "0.15.1"
rxml_validation = "0.11.0"
scraper = "0.23.1"
vec1 = "1.12.1"

[dev-dependencies]
insta = { version = "1.43.1", features = ["glob"] }
oxttl = "0.1.8"
pretty_assertions = "1.4.1"
rstest = { version = "0.25.0", default-features = false, features = ["crate-name"] }
sha2 = "0.10.9"
