[package]
name = "html2rdf"
version = "0.2.0"
authors.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
publish.workspace = true
readme.workspace = true
repository.workspace = true

exclude = [
    "tests/test-suite/test-cases/*/html4*/*",
    "tests/test-suite/test-cases/*/xml*/*",
    "tests/test-suite/test-cases/*/xhtml1*/*",
    "tests/test-suite/test-cases/*/svg*/*",
]

[dependencies]
curie = "0.1.4"
derive_more = { version = "2.1.1", features = [
    "display",
    "error",
    "from",
    "from_str",
] }
icu_locale = { version = "2.1.1" }
indexmap = "2.13.0"
itertools = "0.14.0"
mitsein = "0.9.0"
oxiri = { workspace = true }
oxrdf = { workspace = true }
oxsdatatypes = "0.2.2"
rxml_validation = "0.11.0"
scraper = "0.25.0"
tracing = "0.1.44"

[dev-dependencies]
insta = { version = "1.46.3", features = ["glob"] }
oxrdf = { workspace = true, features = ["rdfc-10"] }
oxttl = { workspace = true }
pretty_assertions = "1.4.1"
rstest = { version = "0.26.1", default-features = false, features = [
    "crate-name",
] }
sha2 = "0.10.9"
