[package]
name = "librdfa-wrapper"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
publish.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true

[target.'cfg(not(target_os = "windows"))'.build-dependencies]
bindgen = "0.72.1"

[dependencies]
oxrdf.workspace = true
